Refactor: Simplify filter handling using switch expressions for improved readability and maintainability