@@ -20,7 +20,7 @@ public class HorizonCutStandingPat implements Predicate<DebugNode> {
     public boolean test(DebugNode debugNode) {
         if (DebugNode.NodeTopology.HORIZON.equals(debugNode.getTopology())) {
             if (debugNode.getChildNodes().size() == 1) {
-                DebugNode childNode = debugNode.getChildNodes().get(0);
+                DebugNode childNode = debugNode.getChildNodes().getFirst();
                 if (DebugNode.NodeTopology.QUIESCENCE.equals(childNode.getTopology()) &&
                         childNode.getChildNodes().size() > 1 &&
                         Objects.equals(childNode.getStandingPat(), childNode.getValue())) {
@@ -34,11 +34,11 @@ public class HorizonCutStandingPat implements Predicate<DebugNode> {
             if (candidateOpt.isPresent()) {
                 DebugNode candidate = candidateOpt.get();
                 if (!candidate.getEntryWrite().isEmpty()) {
-                    DebugOperationTT candidateWriteTT = candidate.getEntryWrite().get(0);
-                    DebugOperationTT debugNodeReadTT = debugNode.getEntryRead().get(0);
+                    DebugOperationTT candidateWriteTT = candidate.getEntryWrite().getFirst();
+                    DebugOperationTT debugNodeReadTT = debugNode.getEntryRead().getFirst();
                     if (candidateWriteTT.getTableType().equals(debugNodeReadTT.getTableType()) &&
                             candidateWriteTT.getEntry().getMovesAndValue() == debugNodeReadTT.getEntry().getMovesAndValue()) {
-                        DebugNode qNode = candidate.getChildNodes().get(0);
+                        DebugNode qNode = candidate.getChildNodes().getFirst();
                         for (int i = 0; i < Math.min(qNode.getChildNodes().size(), debugNode.getChildNodes().size()); i++) {
                             if (qNode.getChildNodes().get(i).getZobristHash() != debugNode.getChildNodes().get(i).getZobristHash()) {
                                 return true;
